# dairy

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  types.json
dairy/: asgi.py  settings.py  urls.py  wsgi.py
dairyapp/: apps.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
dairyapp/migrations/: 0001_initial.py  0002_alter_quest_origin.py  0003_day_quest_day.py  0004_remove_quest_day_alter_quest_created_at.py  0005_alter_day_created_at_alter_quest_created_at.py  0006_quest_errors_quest_theme_description_and_more.py  0007_quest_knowledge.py  0008_quest_last_update.py  0009_rename_complete_description_quest_deprecated_complete_description_and_more.py  0010_quest_knowledge.py  0011_rename_total_completed_tasks_quest_deprecated_total_completed_tasks_and_more.py  0012_remove_quest_done_remove_quest_errors_and_more.py  0013_alter_errors_type.py  0014_alter_errors_quest_alter_errors_text_and_more.py  0015_rename_errors_error_rename_problems_problem.py  0016_alter_done_quest_alter_done_text.py  0017_done_type_knowledge_type_problem_type.py  0018_remove_quest_theme_description_quest_theme_task_and_more.py
diary/: asgi.py  settings.py  urls.py  wsgi.py
diaryapp/: apps.py  emoji.py  forms.py  models.py  serializers.py  tests.py  types.py  urls.py  views.py
diaryapp/migrations/: 0001_initial.py  0002_alter_quest_origin.py  0003_day_quest_day.py  0004_remove_quest_day_alter_quest_created_at.py  0005_alter_day_created_at_alter_quest_created_at.py  0007_quest_knowledge.py  (+12 more)
(+29 files in other folders)
