[tool.poetry]
name = "dairy"
version = "0.1.0"
description = "dairy"
authors = ["wumpscut0"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.7"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.4.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
